--- a/main.html
+++ b/main.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OTP Verification</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+    <h2 id="verification_heading">Verify Your Account</h2>
+    <p id="verification_subtext">We emailed you the six-digit code. Enter the code below to confirm your email address.</p>
+
+    <div class="code-container">
+        <input type="text" class="code" maxlength="1">
+        <input type="text" class="code" maxlength="1">
+        <input type="text" class="code" maxlength="1">
+        <input type="text" class="code" maxlength="1">
+        <input type="text" class="code" maxlength="1">
+        <input type="text" class="code" maxlength="1">
+    </div>
+
+    <script src="script.js"></script>
 </body>
-
 </html>
