--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 
     <h2 id="verification_heading">Verify Your Account</h2>
-    <p id="verification_subtext">We emailed you the six-digit code. Enter the code below to confirm your email address.</p>
+    <p id="verification_subtext">We emailed you the six-digit code to acciojob@email.com Enter the code below to confirm your email address.</p>
 
     <div class="code-container">
         <input type="text" class="code" maxlength="1">
